# bms-dcdc-datacenter

./: .gitignore  AGENTS.md  README.md
app/bms_dcdc_monitor/: CMakeLists.txt  README.md
app/bms_dcdc_monitor/src/: DataModel.h  MockDataGenerator.cpp  MockDataGenerator.h  mainwindow.cpp  mainwindow.h
app/bms_dcdc_monitor/src/audit/: BmsCommandAudit.cpp  BmsCommandAudit.h
app/bms_dcdc_monitor/src/communication/: BmsCommandConfirmationGate.cpp  BmsCommandConfirmationGate.h  BmsCommandMockDispatcher.cpp  BmsCommandMockDispatcher.h  CanFrame.h  CanFrameInputParser.cpp  CanFrameInputParser.h  CanSessionController.cpp  CanSessionController.h  ControlCanWorker.cpp  ControlCanWorker.h  DcdcDataModelBridge.cpp  DcdcDataModelBridge.h  DcdcModbusSession.cpp  DcdcModbusSession.h  MockCanSource.cpp  MockCanSource.h  MockModbusTransport.cpp  MockModbusTransport.h  ModbusRtuClient.cpp  ModbusRtuClient.h  ModbusTransport.cpp  ModbusTransport.h  QSerialPortModbusTransport.cpp  QSerialPortModbusTransport.h
app/bms_dcdc_monitor/src/models/: BmsCommandAuditModel.cpp  BmsCommandAuditModel.h  CanFrameFilterProxyModel.cpp  CanFrameFilterProxyModel.h  CanFrameTableModel.cpp  CanFrameTableModel.h
app/bms_dcdc_monitor/src/pages/: BmsCommandPage.cpp  BmsCommandPage.h  CanMonitorPage.cpp  CanMonitorPage.h
app/bms_dcdc_monitor/src/protocol/: BmsCanParser.cpp  BmsCanParser.h  BmsCommand.cpp  BmsCommand.h  DcdcModbusRegisterMap.cpp  DcdcModbusRegisterMap.h  ModbusRtuFrame.cpp  ModbusRtuFrame.h
app/bms_dcdc_monitor/src/widgets/: BmsCommandAuditDetailWidget.cpp  BmsCommandAuditDetailWidget.h
app/bms_dcdc_monitor/tests/: BmsCanParserTest.cpp  BmsCommandAuditDetailWidgetTest.cpp  BmsCommandAuditModelTest.cpp  BmsCommandConfirmationGateTest.cpp  BmsCommandEncoderTest.cpp  BmsCommandMockDispatcherTest.cpp  BmsCommandPageTest.cpp  CanFrameInputParserTest.cpp  CanFrameTableModelTest.cpp  CanMonitorPageTest.cpp  CanSessionControllerTest.cpp  DcdcDataModelBridgeTest.cpp  DcdcModbusRegisterMapTest.cpp  DcdcModbusSessionTest.cpp  ModbusRtuClientTest.cpp  ModbusRtuFrameTest.cpp  QSerialPortModbusTransportTest.cpp
docs/: 02-data-points.md  04-development-plan.md
scripts/: build_local_qt.sh
命名/: 02-data-points.md
